fix(prose): fix dark mode

--- a/nuxt/assets/css/tailwind.css
+++ b/nuxt/assets/css/tailwind.css
@@ -65,7 +65,11 @@
 
 @layer utilities {
   .maevsi-prose {
-    @apply m-auto prose-sm dark:prose-dark sm:prose sm:dark:prose-dark lg:prose-lg lg:dark:prose-dark xl:prose-xl xl:dark:prose-dark;
+    @apply m-auto prose-sm sm:prose lg:prose-lg xl:prose-xl;
+  }
+
+  .maevsi-prose-scheme {
+    @apply maevsi-prose dark:prose-dark sm:dark:prose-dark lg:dark:prose-dark xl:dark:prose-dark;
   }
 }
 
@@ -76,7 +80,7 @@
 
 .layout-enter,
 .layout-leave-active {
-  opacity: 0%;
+  opacity: 0;
 }
 
 .ProseMirror > * { /* stylelint-disable-line selector-class-pattern */
